--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,10 @@ body {
   margin:0;
 }
 
+h1 {
+  text-align: center;
+}
+
 .flex {
   display: flex;
 }
@@ -22,9 +26,29 @@ ul {
   flex: 1;
 }
 
-button {
+#showModal {
   position: fixed;
   bottom: 10px;
   right: 10px;
-  background: #0099cc;
+  background: hotpink;
+}
+
+.modal-bg {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 100;
+  background-color: rgba(0, 0, 0, .5);
+  display: none;
+}
+
+.modal {
+  background-color: #fff;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 10px;
 }
